Transfer service bug fixing